--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,3 +55,6 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       [build-linux, build-macos, build-windows]
+    steps:
+    - uses: actions/checkout@v3
+    - run: echo "test123"
