--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
     - name: Install requirements
       run: pip install -r requirements.txt
 
@@ -31,6 +35,9 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
     - name: Install requirements
       run: pip install -r requirements.txt
     - name: Package binary
@@ -43,6 +50,9 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
     - name: Install requirements
       run: pip install -r requirements.txt
     - name: Package binary
