--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      name: Checkout repository
 
     - uses: actions/setup-python@v4
+      name: Setup Python
       with:
         python-version: '3.11'
 
@@ -25,10 +27,14 @@ jobs:
     - name: Package binary
       run: python build.py
 
-    - name: Upload binary artifact
-      run: |
-        ls -l
-        echo "${{ steps.get_version.outputs.VERSION_NUM }}"
+    - name: test
+      run: echo "${{ github.event.repository.name }}-v${{ steps.get_version.outputs.VERSION_NUM }}-linux-x86_64"
+
+    - uses: actions/upload-artifact@v3
+      name: Upload binary artifact
+      with:
+        name: linux-binary
+        path: "${{ github.event.repository.name }}-v${{ steps.get_version.outputs.VERSION_NUM }}-linux-x86_64"
   
   build-macos:
     name: Build macOS binary
