--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,29 +30,48 @@ jobs:
     - name: Rename binary
       run: mv "${{ github.event.repository.name }}-v${{ steps.get_version.outputs.VERSION_NUM }}" "${{ github.event.repository.name }}-v${{ steps.get_version.outputs.VERSION_NUM }}-linux-x86_64"
 
-    - name: list files
-      run: ls -l
-
     - uses: actions/upload-artifact@v3
       name: Upload binary artifact
       with:
         name: linux-binary
+        retention-days: 1
         path: "${{ github.event.repository.name }}-v${{ steps.get_version.outputs.VERSION_NUM }}-linux-x86_64"
   
   build-macos:
     name: Build macOS binary
     runs-on: macos-latest
+
     steps:
     - uses: actions/checkout@v3
+      name: Checkout repository
+
     - uses: actions/setup-python@v4
+      name: Setup Python
       with:
         python-version: '3.11'
+
     - name: Install requirements
       run: pip install -r requirements.txt
+
+    - name: Get version
+      id: get_version
+      run: echo "VERSION_NUM=$(python build.py --version)" >> $GITHUB_OUTPUT
+
     - name: Package binary
       run: python build.py
-    - name: Upload binary artifact
+
+    - name: Rename binary
+      run: mv "${{ github.event.repository.name }}-v${{ steps.get_version.outputs.VERSION_NUM }}" "${{ github.event.repository.name }}-v${{ steps.get_version.outputs.VERSION_NUM }}-macos-x86_64"
+
+    - name: List files
       run: ls -l
+
+    - uses: actions/upload-artifact@v3
+      name: Upload binary artifact
+      with:
+        name: macos-binary
+        retention-days: 1
+        path: "${{ github.event.repository.name }}-v${{ steps.get_version.outputs.VERSION_NUM }}-macos-x86_64"
   
   build-windows:
     name: Build Windows binary
@@ -66,8 +85,8 @@ jobs:
       run: pip install -r requirements.txt
     - name: Package binary
       run: python build.py
-    - name: Upload binary artifact
-      run: ls -l
+    - name: list files
+      run: dir
   
   publish-release:
     name: Publish GitHub release
