--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,10 @@ jobs:
 
     - name: Get version
       id: get_version
-      run: echo "VERSION_NUM=$(python build.py --version)" >> $GITHUB_OUTPUT
+      run: |
+        VERSION_NUM=$(python build.py --version)
+        echo $VERSION_NUM >> $GITHUB_OUTPUT
+        echo "v${{ steps.get_version.outputs.VERSION_NUM }}"
 
     - name: Package binary
       run: python build.py
@@ -90,6 +93,8 @@ jobs:
       id: get_version
       run: echo "VERSION_NUM=$(python build.py --version)" >> $GITHUB_OUTPUT
 
+    - run: echo "tekst ispred-${{ steps.get_version.outputs.VERSION_NUM }}-tekst iza"
+
     - name: Package binary
       run: python build.py
 
@@ -105,9 +110,24 @@ jobs:
   
   publish-release:
     name: Publish GitHub release
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs:
       [build-linux, build-macos, build-windows]
+
     steps:
     - uses: actions/checkout@v3
+      name: Checkout repository
+
+    - uses: actions/setup-python@v4
+      name: Setup Python
+      with:
+        python-version: '3.11'
+
+    - name: Install requirements
+      run: pip install -r requirements.txt
+
+    - name: Get version
+      id: get_version
+      run: echo "VERSION_NUM=$(python build.py --version)" >> $GITHUB_OUTPUT
+
     - run: echo "test123"
