work on workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ jobs:
   build-linux:
     name: Build Linux binary
     runs-on: ubuntu-latest
+    shell: bash
 
     steps:
     - uses: actions/checkout@v3
@@ -24,7 +25,7 @@ jobs:
       id: get_version
       run: |
         VERSION_NUM=$(python build.py --version)
-        echo "VERSION_NUM=${{ VERSION_NUM }}" >> $GITHUB_OUTPUT
+        echo "VERSION_NUM=${ VERSION_NUM }" >> $GITHUB_OUTPUT
 
     - name: Package binary
       run: python build.py
@@ -42,6 +43,7 @@ jobs:
   build-macos:
     name: Build macOS binary
     runs-on: macos-latest
+    shell: bash
 
     steps:
     - uses: actions/checkout@v3
@@ -59,7 +61,7 @@ jobs:
       id: get_version
       run: |
         VERSION_NUM=$(python build.py --version)
-        echo "VERSION_NUM=${{ VERSION_NUM }}" >> $GITHUB_OUTPUT
+        echo "VERSION_NUM=${ VERSION_NUM }" >> $GITHUB_OUTPUT
 
     - name: Package binary
       run: python build.py
@@ -77,6 +79,7 @@ jobs:
   build-windows:
     name: Build Windows binary
     runs-on: windows-latest
+    shell: cmd
 
     steps:
     - uses: actions/checkout@v3
