work on workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,8 +93,8 @@ jobs:
     - name: Get version
       id: get_version
       run: |
-        set VERSION_NUM=$(python build.py --version)
-        echo VERSION_NUM=%VERSION_NUM% >> $GITHUB_OUTPUT
+        for /f %i in ('python.exe build.py --version') do (set VERSION_NUM=%i)
+        echo %VERSION_NUM% >> $GITHUB_OUTPUT
 
     - name: Package binary
       run: python build.py
