work on workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -91,10 +91,11 @@ jobs:
       run: pip install -r requirements.txt
 
     - name: Get version
-      shell: cmd
+      shell: bash
       id: get_version
       run: |
-        for /f %i in ('python.exe build.py --version') do (set VERSION_NUM=%i)
+        VERSION_NUM=$(python build.py --version)
+        echo "VERSION_NUM=${VERSION_NUM}" >> $GITHUB_OUTPUT
 
     - name: Package binary
       run: python build.py
