--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,6 +67,12 @@ jobs:
     - name: Rename binary
       run: mv "${{ github.event.repository.name }}-v${{ steps.get_version.outputs.VERSION_NUM }}.app" "${{ github.event.repository.name }}-v${{ steps.get_version.outputs.VERSION_NUM }}-macos-x86_64.app"
 
+    - name: Compress binary
+      run: tar -a -c -v -f "${{ github.event.repository.name }}-v${{ steps.get_version.outputs.VERSION_NUM }}-macos-x86_64.zip" "${{ github.event.repository.name }}-v${{ steps.get_version.outputs.VERSION_NUM }}-macos-x86_64.app"
+
+    - name: list files
+      run: ls -la
+
     - uses: actions/upload-artifact@v3
       name: Upload binary artifact
       with:
@@ -112,7 +118,7 @@ jobs:
   
   publish-release:
     name: Publish GitHub release
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs:
       [build-linux, build-macos, build-windows]
 
