--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,9 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read|write
+  contents: |
+    read
+    write
   metadata: read
   packages: read
 
