--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,6 +12,7 @@ jobs:
       name: Checkout repository
 
     - uses: chartboost/ruff-action@v1
+      name: Run ruff
       with:
         args: |
           --ignore E101
