--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -66,17 +66,13 @@ jobs:
       uses: actions/github-script@v6
       if: steps.check_commit_message.outputs.words_found == 'true'
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          const octokit = require('@octokit/rest')();
           const owner = context.repo.owner;
           const repo = context.repo.repo;
-          const ref = context.sha;
-          octokit.authenticate({
-            type: 'token',
-            token: process.env.GITHUB_TOKEN
-          });
-          octokit.actions.createWorkflowDispatch({
+          const workflow_id = 'release.yml';
+          const ref = context.ref;
+          
+          github.rest.actions.createWorkflowDispatch({
             owner: owner,
             repo: repo,
             workflow_id: 'release.yml',
