--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,6 +2,11 @@ name: Lint
 
 on: push
 
+permissions:
+  actions: write
+  contents: read
+  packages: read
+
 jobs:
   lint-ruff:
     name: Lint with Ruff
