--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -128,6 +128,7 @@ jobs:
     steps:
     - name: Get current SHA
       id: current_sha
+      shell: bash
       run: |
         supplied_sha=${{ github.event.inputs.sha }}
         
